[package]
name = "cymer"
version = "0.1.0"
authors = ["Mathieu <dlacreme@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
toml = "0.5.1"
regex = "1.1.6"
chrono = "0.4.6"
rocket = "0.4.1"
rocket_contrib = "0.4.1"
diesel = { version = "1.4.2", features = ["postgres", "r2d2"] }
